refactor(api): standardize error codes and return to standard RESTful responses